[gd_scene load_steps=13 format=3 uid="uid://oecp2puvk38g"]

[ext_resource type="PackedScene" uid="uid://cl1v0jvgeg26w" path="res://World/Player/player.tscn" id="1_cnwd3"]
[ext_resource type="Script" path="res://World/game.gd" id="1_jwm51"]
[ext_resource type="PackedScene" uid="uid://dnbox7saogsbi" path="res://World/Door/door.tscn" id="3_d52g3"]
[ext_resource type="Texture2D" uid="uid://drpfqn7nesv57" path="res://World/ice.png" id="3_gct40"]
[ext_resource type="Texture2D" uid="uid://bwvoeajd23i7a" path="res://World/button.png" id="4_q2l8f"]
[ext_resource type="AudioStream" uid="uid://bjoeao0fokwrx" path="res://Audio/click.wav" id="6_tbrb1"]
[ext_resource type="AudioStream" uid="uid://dbqr6om7gmk57" path="res://Music/8_bit_ice_cave_lofi.mp3" id="7_7grjy"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2n2s1"]
texture = ExtResource("3_gct40")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_2mp11"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_2n2s1")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_adwrd"]
size = Vector2(8, 20)

[sub_resource type="LabelSettings" id="LabelSettings_fjreq"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_5supr"]
font_size = 32

[node name="Game" type="Node2D"]
process_mode = 3
script = ExtResource("1_jwm51")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.294118, 0.294118, 0.294118, 1)
texture_filter = 1
offset_top = -2240.0
offset_right = 960.0
offset_bottom = 800.0
texture = ExtResource("3_gct40")
stretch_mode = 1

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_2mp11")
format = 2
layer_0/tile_data = PackedInt32Array(1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1114117, 0, 0, 1179653, 0, 0, 1179652, 0, 0, 1114115, 0, 0, 1114114, 0, 0, 1114116, 0, 0, 1179651, 0, 0, 1179650, 0, 0, 1048576, 0, 0, 1114112, 0, 0, 1179648, 0, 0, 1245184, 0, 0, 1310720, 0, 0, 1376256, 0, 0, 1441792, 0, 0, 1507328, 0, 0, 1572864, 0, 0, 1048577, 0, 0, 1114113, 0, 0, 1179649, 0, 0, 1245185, 0, 0, 1310721, 0, 0, 1376257, 0, 0, 1441793, 0, 0, 1507329, 0, 0, 1572865, 0, 0, 1245186, 0, 0, 1310722, 0, 0, 1376258, 0, 0, 1441794, 0, 0, 1507330, 0, 0, 1572866, 0, 0, 1245187, 0, 0, 1310723, 0, 0, 1376259, 0, 0, 1441795, 0, 0, 1507331, 0, 0, 1572867, 0, 0, 1245188, 0, 0, 1310724, 0, 0, 1376260, 0, 0, 1441796, 0, 0, 1507332, 0, 0, 1572868, 0, 0, 1245189, 0, 0, 1310725, 0, 0, 1376261, 0, 0, 1441797, 0, 0, 1507333, 0, 0, 1572869, 0, 0, 1048582, 0, 0, 1114118, 0, 0, 1179654, 0, 0, 1245190, 0, 0, 1310726, 0, 0, 1376262, 0, 0, 1441798, 0, 0, 1507334, 0, 0, 1572870, 0, 0, 1048583, 0, 0, 1114119, 0, 0, 1179655, 0, 0, 1245191, 0, 0, 1310727, 0, 0, 1376263, 0, 0, 1441799, 0, 0, 1507335, 0, 0, 1572871, 0, 0, 1048584, 0, 0, 1114120, 0, 0, 1179656, 0, 0, 1245192, 0, 0, 1310728, 0, 0, 1376264, 0, 0, 1441800, 0, 0, 1507336, 0, 0, 1572872, 0, 0, 1048585, 0, 0, 1114121, 0, 0, 1179657, 0, 0, 1245193, 0, 0, 1310729, 0, 0, 1376265, 0, 0, 1441801, 0, 0, 1507337, 0, 0, 1572873, 0, 0, 1048586, 0, 0, 1114122, 0, 0, 1179658, 0, 0, 1245194, 0, 0, 1310730, 0, 0, 1376266, 0, 0, 1441802, 0, 0, 1507338, 0, 0, 1572874, 0, 0, 1048587, 0, 0, 1114123, 0, 0, 1179659, 0, 0, 1245195, 0, 0, 1310731, 0, 0, 1376267, 0, 0, 1441803, 0, 0, 1507339, 0, 0, 1572875, 0, 0, 1048588, 0, 0, 1114124, 0, 0, 1179660, 0, 0, 1245196, 0, 0, 1310732, 0, 0, 1376268, 0, 0, 1441804, 0, 0, 1507340, 0, 0, 1572876, 0, 0, 1048589, 0, 0, 1114125, 0, 0, 1179661, 0, 0, 1245197, 0, 0, 1310733, 0, 0, 1376269, 0, 0, 1441805, 0, 0, 1507341, 0, 0, 1572877, 0, 0, 1048590, 0, 0, 1114126, 0, 0, 1179662, 0, 0, 1245198, 0, 0, 1310734, 0, 0, 1376270, 0, 0, 1441806, 0, 0, 1507342, 0, 0, 1572878, 0, 0, 1048591, 0, 0, 1114127, 0, 0, 1179663, 0, 0, 1245199, 0, 0, 1310735, 0, 0, 1376271, 0, 0, 1441807, 0, 0, 1507343, 0, 0, 1572879, 0, 0, 1048592, 0, 0, 1114128, 0, 0, 1179664, 0, 0, 1245200, 0, 0, 1310736, 0, 0, 1376272, 0, 0, 1441808, 0, 0, 1507344, 0, 0, 1572880, 0, 0, 1048593, 0, 0, 1114129, 0, 0, 1179665, 0, 0, 1245201, 0, 0, 1310737, 0, 0, 1376273, 0, 0, 1441809, 0, 0, 1507345, 0, 0, 1572881, 0, 0, 1048594, 0, 0, 1114130, 0, 0, 1179666, 0, 0, 1245202, 0, 0, 1310738, 0, 0, 1376274, 0, 0, 1441810, 0, 0, 1507346, 0, 0, 1572882, 0, 0, 1048595, 0, 0, 1114131, 0, 0, 1179667, 0, 0, 1245203, 0, 0, 1310739, 0, 0, 1376275, 0, 0, 1441811, 0, 0, 1507347, 0, 0, 1572883, 0, 0, 1048596, 0, 0, 1114132, 0, 0, 1179668, 0, 0, 1245204, 0, 0, 1310740, 0, 0, 1376276, 0, 0, 1441812, 0, 0, 1507348, 0, 0, 1572884, 0, 0, 1048597, 0, 0, 1114133, 0, 0, 1179669, 0, 0, 1245205, 0, 0, 1310741, 0, 0, 1376277, 0, 0, 1441813, 0, 0, 1507349, 0, 0, 1572885, 0, 0, 1048598, 0, 0, 1114134, 0, 0, 1179670, 0, 0, 1245206, 0, 0, 1310742, 0, 0, 1376278, 0, 0, 1441814, 0, 0, 1507350, 0, 0, 1572886, 0, 0, 851986, 0, 0, 917522, 0, 0, 983058, 0, 0, 851987, 0, 0, 917523, 0, 0, 983059, 0, 0, 851988, 0, 0, 917524, 0, 0, 983060, 0, 0, 851989, 0, 0, 917525, 0, 0, 983061, 0, 0, 851990, 0, 0, 917526, 0, 0, 983062, 0, 0, 851991, 0, 0, 917527, 0, 0, 983063, 0, 0, 1048599, 0, 0, 1114135, 0, 0, 1179671, 0, 0, 1245207, 0, 0, 1310743, 0, 0, 1376279, 0, 0, 1441815, 0, 0, 1507351, 0, 0, 1572887, 0, 0, 851992, 0, 0, 917528, 0, 0, 983064, 0, 0, 1048600, 0, 0, 1114136, 0, 0, 1179672, 0, 0, 1245208, 0, 0, 1310744, 0, 0, 1376280, 0, 0, 1441816, 0, 0, 1507352, 0, 0, 1572888, 0, 0, 851993, 0, 0, 917529, 0, 0, 983065, 0, 0, 1048601, 0, 0, 1114137, 0, 0, 1179673, 0, 0, 1245209, 0, 0, 1310745, 0, 0, 1376281, 0, 0, 1441817, 0, 0, 1507353, 0, 0, 1572889, 0, 0, 851994, 0, 0, 917530, 0, 0, 983066, 0, 0, 1048602, 0, 0, 1114138, 0, 0, 1179674, 0, 0, 1245210, 0, 0, 1310746, 0, 0, 1376282, 0, 0, 1441818, 0, 0, 1507354, 0, 0, 1572890, 0, 0, 851995, 0, 0, 917531, 0, 0, 983067, 0, 0, 1048603, 0, 0, 1114139, 0, 0, 1179675, 0, 0, 1245211, 0, 0, 1310747, 0, 0, 1376283, 0, 0, 1441819, 0, 0, 1507355, 0, 0, 1572891, 0, 0, 851996, 0, 0, 917532, 0, 0, 983068, 0, 0, 1048604, 0, 0, 1114140, 0, 0, 1179676, 0, 0, 1245212, 0, 0, 1310748, 0, 0, 1376284, 0, 0, 1441820, 0, 0, 1507356, 0, 0, 1572892, 0, 0, 851997, 0, 0, 917533, 0, 0, 983069, 0, 0, 1048605, 0, 0, 1114141, 0, 0, 1179677, 0, 0, 1245213, 0, 0, 1310749, 0, 0, 1376285, 0, 0, 1441821, 0, 0, 1507357, 0, 0, 1572893, 0, 0, 786455, 0, 0, 720919, 0, 0, 720920, 0, 0, 720921, 0, 0, 720922, 0, 0, 720923, 0, 0, 720924, 0, 0, 720925, 0, 0, 786461, 0, 0, 786460, 0, 0, 786459, 0, 0, 786458, 0, 0, 786457, 0, 0, 786456, 0, 0, -65536, 0, 0, 0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 786432, 0, 0, 851968, 0, 0, 917504, 0, 0, 983040, 0, 0, -65535, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, 720897, 0, 0, 786433, 0, 0, 851969, 0, 0, 917505, 0, 0, 983041, 0, 0, 458772, 0, 0, 458771, 0, 0, 458770, 0, 0, 458769, 0, 0, 458768, 0, 0, 458767, 0, 0, 458766, 0, 0, 393225, 0, 0, 393224, 0, 0, 393223, 0, 0, 393222, 0, 0, 393221, 0, 0, -4587520, 0, 0, -4521984, 0, 0, -4456448, 0, 0, -4390912, 0, 0, -4325376, 0, 0, -4259840, 0, 0, -4587519, 0, 0, -4521983, 0, 0, -4456447, 0, 0, -4390911, 0, 0, -4325375, 0, 0, -4259839, 0, 0, -4587518, 0, 0, -4521982, 0, 0, -4456446, 0, 0, -4390910, 0, 0, -4325374, 0, 0, -4259838, 0, 0, -4587517, 0, 0, -4521981, 0, 0, -4456445, 0, 0, -4390909, 0, 0, -4325373, 0, 0, -4259837, 0, 0, -4587516, 0, 0, -4521980, 0, 0, -4456444, 0, 0, -4390908, 0, 0, -4325372, 0, 0, -4259836, 0, 0, -4587515, 0, 0, -4521979, 0, 0, -4456443, 0, 0, -4390907, 0, 0, -4325371, 0, 0, -4259835, 0, 0, -4587514, 0, 0, -4521978, 0, 0, -4456442, 0, 0, -4390906, 0, 0, -4325370, 0, 0, -4259834, 0, 0, -4587513, 0, 0, -4521977, 0, 0, -4456441, 0, 0, -4390905, 0, 0, -4325369, 0, 0, -4259833, 0, 0, -4587512, 0, 0, -4521976, 0, 0, -4456440, 0, 0, -4390904, 0, 0, -4325368, 0, 0, -4259832, 0, 0, -4587511, 0, 0, -4521975, 0, 0, -4456439, 0, 0, -4390903, 0, 0, -4325367, 0, 0, -4259831, 0, 0, -4587510, 0, 0, -4521974, 0, 0, -4456438, 0, 0, -4390902, 0, 0, -4325366, 0, 0, -4259830, 0, 0, -4587509, 0, 0, -4521973, 0, 0, -4456437, 0, 0, -4390901, 0, 0, -4325365, 0, 0, -4259829, 0, 0, -4587508, 0, 0, -4521972, 0, 0, -4456436, 0, 0, -4390900, 0, 0, -4325364, 0, 0, -4259828, 0, 0, -4587507, 0, 0, -4521971, 0, 0, -4456435, 0, 0, -4390899, 0, 0, -4325363, 0, 0, -4259827, 0, 0, -4587506, 0, 0, -4521970, 0, 0, -4456434, 0, 0, -4390898, 0, 0, -4325362, 0, 0, -4259826, 0, 0, -4587505, 0, 0, -4521969, 0, 0, -4456433, 0, 0, -4390897, 0, 0, -4325361, 0, 0, -4259825, 0, 0, -4587504, 0, 0, -4521968, 0, 0, -4456432, 0, 0, -4390896, 0, 0, -4325360, 0, 0, -4259824, 0, 0, -4587503, 0, 0, -4521967, 0, 0, -4456431, 0, 0, -4390895, 0, 0, -4325359, 0, 0, -4259823, 0, 0, -4587502, 0, 0, -4521966, 0, 0, -4456430, 0, 0, -4390894, 0, 0, -4325358, 0, 0, -4259822, 0, 0, -4587501, 0, 0, -4521965, 0, 0, -4456429, 0, 0, -4390893, 0, 0, -4325357, 0, 0, -4259821, 0, 0, -4587500, 0, 0, -4521964, 0, 0, -4456428, 0, 0, -4390892, 0, 0, -4325356, 0, 0, -4259820, 0, 0, -4587499, 0, 0, -4521963, 0, 0, -4456427, 0, 0, -4390891, 0, 0, -4325355, 0, 0, -4259819, 0, 0, -4587498, 0, 0, -4521962, 0, 0, -4456426, 0, 0, -4390890, 0, 0, -4325354, 0, 0, -4259818, 0, 0, -4587497, 0, 0, -4521961, 0, 0, -4456425, 0, 0, -4390889, 0, 0, -4325353, 0, 0, -4259817, 0, 0, -4587496, 0, 0, -4521960, 0, 0, -4456424, 0, 0, -4390888, 0, 0, -4325352, 0, 0, -4259816, 0, 0, -4587495, 0, 0, -4521959, 0, 0, -4456423, 0, 0, -4390887, 0, 0, -4325351, 0, 0, -4259815, 0, 0, -4587494, 0, 0, -4521958, 0, 0, -4456422, 0, 0, -4390886, 0, 0, -4325350, 0, 0, -4259814, 0, 0, -4587493, 0, 0, -4521957, 0, 0, -4456421, 0, 0, -4390885, 0, 0, -4325349, 0, 0, -4259813, 0, 0, -4587492, 0, 0, -4521956, 0, 0, -4456420, 0, 0, -4390884, 0, 0, -4325348, 0, 0, -4259812, 0, 0, -4587491, 0, 0, -4521955, 0, 0, -4456419, 0, 0, -4390883, 0, 0, -4325347, 0, 0, -4259811, 0, 0, -917498, 0, 0, -983034, 0, 0, -1048570, 0, 0, -1114106, 0, 0, -1179642, 0, 0, -1245178, 0, 0, -1310714, 0, 0, -1376250, 0, 0, -1441786, 0, 0, -1507322, 0, 0, -1572858, 0, 0, -1638394, 0, 0, -1703930, 0, 0, -1769466, 0, 0, -1835002, 0, 0, -1900538, 0, 0, -1966074, 0, 0, -2031610, 0, 0, -2031609, 0, 0, -3014654, 0, 0, -2752507, 0, 0, -2752506, 0, 0, -3211258, 0, 0, -3211257, 0, 0, -3211256, 0, 0, -3211255, 0, 0, -3211254, 0, 0, -3407858, 0, 0, -3407857, 0, 0, -3538921, 0, 0, -3538920, 0, 0, -3538919, 0, 0, -3538918, 0, 0, -3538917, 0, 0, -4194276, 0, 0, -4128740, 0, 0, -4063204, 0, 0, -3997668, 0, 0, -3932132, 0, 0, -3866596, 0, 0, -3801060, 0, 0, -3735524, 0, 0, -3669988, 0, 0, -3604452, 0, 0, -3538916, 0, 0, -3473380, 0, 0, -3407844, 0, 0, -3342308, 0, 0, -3276772, 0, 0, -3211236, 0, 0, -3145700, 0, 0, -3080164, 0, 0, -3014628, 0, 0, -2949092, 0, 0, -2883556, 0, 0, -2818020, 0, 0, -2752484, 0, 0, -2686948, 0, 0, -2621412, 0, 0, -2555876, 0, 0, -2490340, 0, 0, -2424804, 0, 0, -2359268, 0, 0, -2293732, 0, 0, -2228196, 0, 0, -2162660, 0, 0, -2097124, 0, 0, -2031588, 0, 0, -1966052, 0, 0, -1900516, 0, 0, -1834980, 0, 0, -1769444, 0, 0, -1703908, 0, 0, -1638372, 0, 0, -1572836, 0, 0, -1507300, 0, 0, -4194275, 0, 0, -4128739, 0, 0, -4063203, 0, 0, -3997667, 0, 0, -3932131, 0, 0, -3866595, 0, 0, -3801059, 0, 0, -3735523, 0, 0, -3669987, 0, 0, -3604451, 0, 0, -3538915, 0, 0, -3473379, 0, 0, -3407843, 0, 0, -3342307, 0, 0, -3276771, 0, 0, -3211235, 0, 0, -3145699, 0, 0, -3080163, 0, 0, -3014627, 0, 0, -2949091, 0, 0, -2883555, 0, 0, -2818019, 0, 0, -2752483, 0, 0, -2686947, 0, 0, -2621411, 0, 0, -2555875, 0, 0, -2490339, 0, 0, -2424803, 0, 0, -2359267, 0, 0, -2293731, 0, 0, -2228195, 0, 0, -2162659, 0, 0, -2097123, 0, 0, -2031587, 0, 0, -1966051, 0, 0, -1900515, 0, 0, -1834979, 0, 0, -1769443, 0, 0, -1703907, 0, 0, -1638371, 0, 0, -1572835, 0, 0, -1507299, 0, 0, -131072, 0, 0, -196608, 0, 0, -262144, 0, 0, -327680, 0, 0, -393216, 0, 0, -458752, 0, 0, -524288, 0, 0, -589824, 0, 0, -655360, 0, 0, -720896, 0, 0, -786432, 0, 0, -851968, 0, 0, -917504, 0, 0, -983040, 0, 0, -1048576, 0, 0, -1114112, 0, 0, -1179648, 0, 0, -1245184, 0, 0, -1310720, 0, 0, -1376256, 0, 0, -1441792, 0, 0, -1507328, 0, 0, -1572864, 0, 0, -1638400, 0, 0, -1703936, 0, 0, -1769472, 0, 0, -1835008, 0, 0, -1900544, 0, 0, -1966080, 0, 0, -2031616, 0, 0, -2097152, 0, 0, -2162688, 0, 0, -2228224, 0, 0, -2293760, 0, 0, -2359296, 0, 0, -2424832, 0, 0, -2490368, 0, 0, -2555904, 0, 0, -2621440, 0, 0, -2686976, 0, 0, -2752512, 0, 0, -2818048, 0, 0, -2883584, 0, 0, -2949120, 0, 0, -3014656, 0, 0, -3080192, 0, 0, -3145728, 0, 0, -3211264, 0, 0, -3276800, 0, 0, -3342336, 0, 0, -3407872, 0, 0, -3473408, 0, 0, -3538944, 0, 0, -3538943, 0, 0, -131071, 0, 0, -196607, 0, 0, -262143, 0, 0, -327679, 0, 0, -393215, 0, 0, -458751, 0, 0, -524287, 0, 0, -589823, 0, 0, -655359, 0, 0, -720895, 0, 0, -786431, 0, 0, -851967, 0, 0, -917503, 0, 0, -983039, 0, 0, -1048575, 0, 0, -1114111, 0, 0, -1179647, 0, 0, -1245183, 0, 0, -1310719, 0, 0, -1376255, 0, 0, -1441791, 0, 0, -1507327, 0, 0, -1572863, 0, 0, -1638399, 0, 0, -1703935, 0, 0, -1769471, 0, 0, -1835007, 0, 0, -1900543, 0, 0, -1966079, 0, 0, -2031615, 0, 0, -2097151, 0, 0, -2162687, 0, 0, -2228223, 0, 0, -2293759, 0, 0, -2359295, 0, 0, -2424831, 0, 0, -2490367, 0, 0, -2555903, 0, 0, -2621439, 0, 0, -2686975, 0, 0, -2752511, 0, 0, -2818047, 0, 0, -2883583, 0, 0, -2949119, 0, 0, -3014655, 0, 0, -3080191, 0, 0, -3145727, 0, 0, -3211263, 0, 0, -3276799, 0, 0, -3342335, 0, 0, -3407871, 0, 0, -3473407, 0, 0, 655388, 0, 0, 589852, 0, 0, 524316, 0, 0, 458780, 0, 0, 393244, 0, 0, 327708, 0, 0, 262172, 0, 0, 196636, 0, 0, 131100, 0, 0, 65564, 0, 0, 28, 0, 0, -65508, 0, 0, -131044, 0, 0, -196580, 0, 0, -262116, 0, 0, -327652, 0, 0, -393188, 0, 0, -458724, 0, 0, -524260, 0, 0, -589796, 0, 0, -655332, 0, 0, -720868, 0, 0, -786404, 0, 0, -851940, 0, 0, -917476, 0, 0, -983012, 0, 0, -1048548, 0, 0, -1114084, 0, 0, -1179620, 0, 0, -1245156, 0, 0, -1310692, 0, 0, -1376228, 0, 0, -1441764, 0, 0, -1441763, 0, 0, -1376227, 0, 0, -1310691, 0, 0, -1245155, 0, 0, -1179619, 0, 0, -1114083, 0, 0, -1048547, 0, 0, -983011, 0, 0, -917475, 0, 0, -851939, 0, 0, -786403, 0, 0, -720867, 0, 0, -655331, 0, 0, -589795, 0, 0, -524259, 0, 0, -458723, 0, 0, -393187, 0, 0, -327651, 0, 0, -262115, 0, 0, -196579, 0, 0, -131043, 0, 0, -65507, 0, 0, 29, 0, 0, 65565, 0, 0, 131101, 0, 0, 196637, 0, 0, 262173, 0, 0, 327709, 0, 0, 393245, 0, 0, 458781, 0, 0, 524317, 0, 0, 589853, 0, 0, 655389, 0, 0, 8, 0, 0, -65528, 0, 0, -131064, 0, 0, -196600, 0, 0, -262136, 0, 0, -262135, 0, 0, -262134, 0, 0, -262133, 0, 0, -262132, 0, 0, -262131, 0, 0, -720885, 0, 0, -720884, 0, 0, -720883, 0, 0, -720882, 0, 0, -458733, 0, 0, -458732, 0, 0, -458731, 0, 0, -458730, 0, 0, -458729, 0, 0, -524261, 0, 0, -1834981, 0, 0, -1572844, 0, 0, -1572843, 0, 0, -1572842, 0, 0, -1572841, 0, 0, -1572848, 0, 0, -1572849, 0, 0, -1572850, 0, 0, -1572851, 0, 0, -1572852, 0, 0, -1572853, 0, 0, -1507317, 0, 0, -1441781, 0, 0, -1376245, 0, 0, -1310709, 0, 0, -1245173, 0, 0, -1179637, 0, 0, -1114101, 0, 0, -2228200, 0, 0, -2293736, 0, 0, -2359272, 0, 0, -2424808, 0, 0, -2490344, 0, 0, -2555885, 0, 0, -2555886, 0, 0, -2555887, 0, 0, -2555888, 0, 0, -2555889, 0, 0, -2555890, 0, 0, -2555891, 0, 0, -2555892, 0, 0, -2555893, 0, 0, -2555894, 0, 0, -3604480, 0, 0, -3670016, 0, 0, -3735552, 0, 0, -3801088, 0, 0, -3866624, 0, 0, -3932160, 0, 0, -3997696, 0, 0, -4063232, 0, 0, -4128768, 0, 0, -4194304, 0, 0, -4194303, 0, 0, -4128767, 0, 0, -4063231, 0, 0, -3997695, 0, 0, -3932159, 0, 0, -3866623, 0, 0, -3801087, 0, 0, -3735551, 0, 0, -3670015, 0, 0, -3604479, 0, 0, -4653056, 0, 0, -4653055, 0, 0, -4653054, 0, 0, -4653053, 0, 0, -4653052, 0, 0, -4653051, 0, 0, -4653050, 0, 0, -4653049, 0, 0, -4653048, 0, 0, -4653047, 0, 0, -4653046, 0, 0, -4653045, 0, 0, -4653044, 0, 0, -4653043, 0, 0, -4653042, 0, 0, -4653041, 0, 0, -4653040, 0, 0, -4653039, 0, 0, -4653038, 0, 0, -4653037, 0, 0, -4653036, 0, 0, -4653035, 0, 0, -4653034, 0, 0, -4653033, 0, 0, -4653032, 0, 0, -4653031, 0, 0, -4653030, 0, 0, -4653027, 0, 0, -4653028, 0, 0, -4653029, 0, 0)

[node name="Door" parent="." instance=ExtResource("3_d52g3")]
position = Vector2(858, -1768)

[node name="Timer" type="Timer" parent="Door"]

[node name="Button" type="Area2D" parent="."]
position = Vector2(193, -705)
collision_layer = 0
collision_mask = 2
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Button"]
texture_filter = 1
position = Vector2(-5, 6.4969e-06)
texture = ExtResource("4_q2l8f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button"]
position = Vector2(-5, 0)
shape = SubResource("RectangleShape2D_adwrd")

[node name="Player" parent="." instance=ExtResource("1_cnwd3")]
position = Vector2(166, 496)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(475, 325)
position_smoothing_speed = 15.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_right = 950.0
offset_bottom = 650.0
color = Color(0, 0, 0, 1)

[node name="PasswordPanel" type="Panel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -86.0
offset_right = 142.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/PasswordPanel"]
process_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = 7.0
offset_right = 33.0625
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
max_length = 4
context_menu_enabled = false
virtual_keyboard_type = 2

[node name="Label" type="Label" parent="CanvasLayer/PasswordPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -37.0
offset_top = 12.0
offset_right = 38.0
offset_bottom = 35.0
grow_horizontal = 2
text = "Password"
label_settings = SubResource("LabelSettings_fjreq")

[node name="Label2" type="Label" parent="CanvasLayer/PasswordPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -111.0
offset_top = -29.0
offset_right = 111.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
text = "Hint: a button has appeared."

[node name="Panel" type="Panel" parent="CanvasLayer"]
visible = false
offset_left = 4.0
offset_top = 609.0
offset_right = 80.0
offset_bottom = 645.0

[node name="PasswordLabel" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 1.0
offset_top = -5.0
offset_right = 73.0
offset_bottom = 40.0
text = "1234"
label_settings = SubResource("LabelSettings_5supr")

[node name="BackButton" type="Button" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 131.0
offset_bottom = 47.0
text = "Back to Menu"

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_tbrb1")

[node name="8BitIceCaveMusic" type="AudioStreamPlayer" parent="."]
process_mode = 1
stream = ExtResource("7_7grjy")
autoplay = true

[connection signal="timeout" from="Door/Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Button" to="." method="_on_button_body_entered"]
[connection signal="text_changed" from="CanvasLayer/PasswordPanel/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="CanvasLayer/BackButton" to="." method="_on_button_pressed"]
